# base32

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: base32.rs  crockford-base32.rs  lib.rs
